<resources>
    <string name="app_name">IVSudoku</string>    
    <string name="menu_settings">About</string>
    <string name="title_activity_main">Simple sudoku game</string>
	<string name="title_buttonClear">Clear</string>
	<string name="title_buttonHighscore">Highscore</string>
	<string name="title_buttonNewGame">New game</string>
	<string name="title_Difficult">Difficult</string>
	<string name="dialog_username">Input user name</string>
	<string name="title_highscoreLabel1">Level</string>
	<string name="title_highscoreLabel2">Username</string>
	<string name="title_highscoreLabel3">Time</string>
	<string name="default_gridItem">TextView</string>
	<string name="title_digit1">1</string>
	<string name="title_digit2">2</string>
	<string name="title_digit3">3</string>
	<string name="title_digit4">4</string>
	<string name="title_digit5">5</string>
	<string name="title_digit6">6</string>
	<string name="title_digit7">7</string>
	<string name="title_digit8">8</string>
	<string name="title_digit9">9</string>
	<string name="title_digit0">" "</string>
	<string name="title_Timer">Time</string>
	<string name="title_TimerCounter">00:00:00</string>
	<string name="toast_Str1">Congratulations,&#x20;</string>
	<string name="toast_Str2">. Elapsed time&#x20;</string>
	<string name="twitter_Str1">I&quot;ve successed Sudoku in IVSudoku at level&#x20;</string>
	<string name="twitter_Str2">&#x20;in period&#x20;</string>
	<string name="uprompt_Question">Continue last game?</string>
	<string name="uprompt_Yes">Yes</string>
	<string name="uprompt_No">No</string>
	<string name="difficultGod">Difficult for advanced</string>
	<string name="difficultAdult">Difficult for adult</string>
	<string name="difficultTeenager">Difficult for teenager</string>
	<string name="difficultBaby">Difficult for baby</string>
	<string name="menu_restart">Restart</string>
	<string name="menu_undo">Undo</string>	
</resources>