<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
 
    <TextView
        android:id="@+id/highscoreLabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="#000"
        android:text="@string/title_highscoreLabel1"
        android:textColor="#baa" />
	
    <TextView
        android:id="@+id/highscoreLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:background="#000"
        android:text="@string/title_highscoreLabel2"
        android:textColor="#baa" />
	
	<TextView
	    android:id="@+id/highscoreLabel3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="0.2"
	    android:background="#000"
	    android:text="@string/title_highscoreLabel3"
	    android:textColor="#baa" />

</LinearLayout>

<ListView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/highscoreTable"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    </ListView>
</LinearLayout>